fix typo w06-sequences-exercise.tex

--- a/compendium/modules/w06-sequences-exercise.tex
+++ b/compendium/modules/w06-sequences-exercise.tex
@@ -124,7 +124,7 @@ scala> ys
 scala> zs
 \end{REPL}
 
-\Task \emph{Algortim: SEQ-REVERSE-COPY.} Implementera nedan algoritm:
+\Task \emph{Algoritm: SEQ-REVERSE-COPY.} Implementera nedan algoritm:
 
 \begin{algorithm}[H]
  \SetKwInOut{Input}{Indata}\SetKwInOut{Output}{Resultat}
